fixed buttons to be more aligned

--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -17,25 +17,36 @@
     flex-direction: column;
 }
 
-.projects{
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.projects-section{
     display: flex;
     justify-content: space-between;
-    transform: translateY(70px);
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 20px;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.projects, .resume{
+    flex: 1;
+    text-align: center;
     
 }
 
-.button-01{
+.buttons-container{
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+    
+}
+
+/* button inspo taken from https://getcssscan.com/css-buttons-examples (button 33) */
+.button{
     background-color: #588fb6;
     border-radius: 100px;
     box-shadow: rgba(80, 182, 255, 0.2) 0 -25px 18px -14px inset,rgba(21, 54, 77, 0.2) 0 1px 2px,rgba(21, 54, 77, 0.2) 0 2px 4px,rgba(21, 54, 77, 0.2) 0 4px 8px,rgba(21, 54, 77, 0.2) 0 8px 16px,rgba(21, 54, 77, 0.2) 0 16px 32px;
     color: rgb(255, 255, 255);
     display: inline-block;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 7px 20px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     transition: all 250ms;
@@ -44,37 +55,13 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    margin: 20%;
-    transform: translateY(-270px);
-    
+    margin: 10px 0;
+    width: 80%;
+    max-width: 300px;
+    margin-top: 2.5%;
 }
   
-.button-01:hover{
+.button:hover{
     box-shadow: rgba(80, 182, 255, 0.2) 0 -25px 18px -14px inset,rgba(80, 182, 255, 0.2) 0 1px 2px,rgba(80, 182, 255, 0.2) 0 2px 4px,rgba(80, 182, 255, 0.2) 0 4px 8px,rgba(80, 182, 255, 0.2) 0 8px 16px,rgba(80, 182, 255, 0.2) 0 16px 32px;
-    transform: translateY(-270px) scale(1.05);
-}
-
-.button-02{
-    background-color: #588fb6;
-    border-radius: 100px;
-    box-shadow: rgba(80, 182, 255, 0.2) 0 -25px 18px -14px inset,rgba(21, 54, 77, 0.2) 0 1px 2px,rgba(21, 54, 77, 0.2) 0 2px 4px,rgba(21, 54, 77, 0.2) 0 4px 8px,rgba(21, 54, 77, 0.2) 0 8px 16px,rgba(21, 54, 77, 0.2) 0 16px 32px;
-    color: rgb(255, 255, 255);
-    display: inline-block;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 7px 20px;
-    text-align: center;
-    text-decoration: none;
-    transition: all 250ms;
-    border: 0;
-    font-size: 16px;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin: 20%;
-    transform: translateY(-1000px);
-}
-  
-.button-02:hover{
-    box-shadow: rgba(80, 182, 255, 0.2) 0 -25px 18px -14px inset,rgba(80, 182, 255, 0.2) 0 1px 2px,rgba(80, 182, 255, 0.2) 0 2px 4px,rgba(80, 182, 255, 0.2) 0 4px 8px,rgba(80, 182, 255, 0.2) 0 8px 16px,rgba(80, 182, 255, 0.2) 0 16px 32px;
-    transform: translateY(-1000px) scale(1.05);
+    transform: scale(1.05);
 }
